2004-08-12 Mikhail Khodjaiants
	Warning cleanup.
	* AbstractCLaunchDelegate.java
	* CApplicationLaunchShortcut.java

2004-08-10 Mikhail Khodjaiants
	Fix for bug 70442: Debugger launch configuration not updating properly.
	* AbstractCDebuggerTab.java

2004-07-21 Mikhail Khodjaiants
	Replaced the decprecated target factory methods.
	* CoreFileLaunchDelegate.java
	* LocalCLaunchConfigurationDelegate.java

2004-07-14 Mikhail Khodjaiants
	Fix for bug 69977: TVT3.0: Non-externalized strings in Launching Debug.
	Applied patch from Tanya Wollf.
	* CApplicationLaunchShortcut.java
	* LaunchUIPluginResources.properties

2004-06-21 Mikhail Khodjaiants
	Fix for bug 60872. Accessibility: Run/Debug configuration dialog has duplicate mnemonics.
	Warning cleanup.
	* LaunchUIPluginResources.properties
	* CEnvironmentTab.java
	* CMainTab.java

2004-05-09 Mikhail Khodjaiants
	Added the rendering method for debugger processes.
	* src/org/eclise/cdt/launch/AbstractCLaunchDelegate.java
	* src/org/eclise/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclise/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/LaunchUIPluginResources.properties

2004-05-09 Mikhail Khodjaiants
	Fix for bug 66015: I18N: English "Debug Console" in Debug and Console views.
	Warning cleanup.
	* src/org/eclise/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclise/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/LaunchUIPluginResources.properties
	* src/org/eclise/cdt/launch/internal/CApplicationLaunchShortcut.java

2004-06-08 Alain Magloire
	Make sure when something goes wrong before
	getting out the launch sequence to terminate the session.

	* src/org/eclise/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclise/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java

2004-04-23 David Inglis

	fix for https://bugs.eclipse.org/bugs/show_bug.cgi?id=59680
	