@@ -14,7 +14,7 @@ providerName=Eclipse.org
 LocalCDTLaunch.name= C/C++ Local
 CoreFileCDTLaunch.name= C/C++ Postmortem debugger
 
-CApplicationShortcut.label=C Local Application
-ContextualRunJavaApplication.label=Run C Local Application
-ContextualDebugJavaApplication.label=Debug C Local Application
+CApplicationShortcut.label=Local C/C++ Application
+ContextualRunCApplication.label=Run Local C/C++ Application
+ContextualDebugCApplication.label=Debug Local C/C++ Application
 
